                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 11-11-2004 added: <description> tag with the real label etc. for the <homebuttons> block in XBoxMediaCenter.xml
  - 11-11-2004 fixed: shutdown button
  - 10-11-2004 added: new control buttonscroller for homepage buttons.
  - 10-11-2004 added: <homebuttons> group added to XBoxMediaCenter.xml for user configurable buttons.
  - 10-11-2004 added: XBMC.ActivateWindow() built-in command.                    
  - 10-11-2004 fixed: subtitle size of 4:3 videos displayed on widescreen
  - 09-11-2004 fixed: my music songs, record button was not enabled/disabled immediately after starting/stopping a shoutcast stream
  - 08-11-2004 added: new command "XBMC.RestartApp" for skinners to restart only the application
  - 08-11-2004 changed: xbmc will now only restart xbmc instead of the xbox when soft restart is requested
  - 07-11-2004 added: xbmc will now check for necessary files when executing a python script
  - 07-11-2004 Updated finnish strings.xml (thanks nanite1k)
  - 06-11-2004 updated: Italian language file (Thnx to kotix)
  - 06-11-2004 updated: Dutch language file (Thnx to joepmeloenx)
  - 06-11-2004 updated: German (Austrian) language file (Thnx to CEOMR)
  - 06-11-2004 updated: German language file
  - 06-11-2004 changed: Some strings from cd+g support changed for better translation
  - 06-11-2004 fixed ttf font .srt subtitle lockup issue
  - 06-11-2004 changed: CD+G support updated (Thnx to stcogolin)
  - 06-11-2004 moved: Random slideshow button to My Pictures (from settings)
  - 06-11-2004 fixed: default resolution tags in skin.xml are now case-insensitive
  - 06-11-2004 changed: default IP addresses if none are set.